Fix bug where the elements in the <Info> of <EpisodeTile> were not visible

--- a/src/Pages/EpisodesList/Subcomponents/EpisodeTile/Subcomponents/Info/Info.scss
+++ b/src/Pages/EpisodesList/Subcomponents/EpisodeTile/Subcomponents/Info/Info.scss
@@ -3,6 +3,11 @@ $image-height: 200px;
 .episode-tile-info {
     position: relative;
     height: $image-height;
+    > *:not(.episode-image) {
+        position: relative;
+        width: 100%;
+        z-index: 260;
+    }
 
     .episode-image {
         height: $image-height;
